tests/baselines/reference/classMemberInitializerWithLamdaScoping4.errors.txt
tests/cases/compiler/classMemberInitializerWithLamdaScoping3_1.ts(8,21): error TS2663: Cannot find name 'field1'. Did you mean the instance member 'this.field1'?


==== tests/cases/compiler/classMemberInitializerWithLamdaScoping3_0.ts (0 errors) ====
    export var field1: string;
    
==== tests/cases/compiler/classMemberInitializerWithLamdaScoping3_1.ts (1 errors) ====
    declare var console: {
        log(msg?: any): void;
    };
    export class Test1 {
        constructor(private field1: string) {
        }
        messageHandler = () => {
            console.log(field1); // Should be error that couldnt find symbol field1
                        ~~~~~~
!!! error TS2663: Cannot find name 'field1'. Did you mean the instance member 'this.field1'?
        };
    }